2005-08-15  Bert Vincent <bert@bic.mni.mcgill.ca>
	* Add regional_thickness and remap_to_lobes
	
2005-05-31  Bert Vincent <bert@bic.mni.mcgill.ca>
	* Fix smooth_mask to use DefaultArgs as it used to.
	
2005-05-30  Bert Vincent <bert@bic.mni.mcgill.ca>
	* Add suppress_fat
	* More fixes to multispectral_stx_registration.pl
	
2005-05-26  Bert Vincent <bert@bic.mni.mcgill.ca>
	* Add mincmask
	* More minor build tweaks

2005-05-25  Bert Vincent <bert@bic.mni.mcgill.ca>
	* Build fixes
	* Added orphan perl scripts
	
2005-03-18  Andrew Janke  <a.janke@gmail.com>
	* replaced all sqrtf()'s with sqrt() for OSX build
	
2005-03-01  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* Added normalize_pet
	
2004-04-22  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* Added find_peaks
	* Update version to 1.4
	
2004-04-07  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* Added match_tags
	
2004-02-05  Jason Lerch	   <jason@bic.mni.mcgill.ca>

	* surface_mask2 now outputs volumes in the same dimension order as
	the input volume.

2003-11-17  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* COPYING: New.  License text copied from bicpl.

	* ParseArgv.c:
	* ParseArgv.h: Remove.  These files are now installed as part of minc.
	
	* Makefile.am (volume_object_evaluate_SOURCES): Remove ParseArgv.c.

2003-10-14  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* ascii_binary.c: Delete.  This program was moved to package
	bicpl on 2001-04-02 and the former is a prerequisite of this
	package.

	* Makefile.am (bin_PROGRAMS): Remove ascii_binary.

2003-09-08  Jason Lerch    <jason@bic.mni.mcgill.ca>

	* added a -output_binary_mask option to surface_mask2

2003-08-29  Jason Lerch    <jason@bic.mni.mcgill.ca>

	* fixed a bug in surface_mask2 which caused it to fail when the
	histogram of the input volume was skewed and the volume had a
	datatype other than NC_BYTE. Now reads in volume using
	MI_ORIGINAL_TYPE. 

2003-04-30  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* average_objects.c: Completed the code.
